# AI-language-trainer

./: .gitignore  README.md  run_local_app.bat  stop_local_app.bat  tz_ai_english_trainer_modular_v_1.md
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260320_1645_initial_persistence_schema.py  20260320_1810_add_content_tables.py  20260320_1840_add_speaking_pronunciation_writing_tables.py  20260320_2005_add_provider_preferences.py  20260320_2235_add_speaking_attempts.py  (+7 more)
backend/app/: main.py
backend/app/api/: router.py  (+1 more)
backend/scripts/: __init__.py  bootstrap_content.py  export_json_schemas.py  musetalk_live_sidecar.py  qwen_tts_sidecar.py  seed_demo_data.py  setup_liveportrait_runtime.ps1  setup_musetalk_runtime.ps1  setup_qwen_tts_runtime.ps1
backend/tests/: conftest.py  test_adaptive_copy_builders.py  test_adaptive_loop_builders.py  test_adaptive_rotation_builders.py  test_api_route_dependency_signatures.py  test_app_runtime_builders.py  test_dashboard_builders.py  test_diagnostic_helpers.py  test_learning_blueprint_service.py  test_lesson_catalog.py  test_lesson_template_builders.py  test_profile_bootstrap_helpers.py  test_profile_bootstrap_service.py  test_progress_and_user_account_helpers.py  test_pronunciation_service.py  test_repositories.py  test_repository_mappers.py  test_tts_text_preparation.py  test_vocabulary_helpers.py  test_vocabulary_word_journal.py  test_voice_prompt_cache.py  test_welcome_tutor_service.py
backend/tools/: debug_avatar_pipeline.py  generate_presence_assets.py  regenerate_idle.py
(+436 files in other folders)
